using System.Diagnostics;
using System.IO;
using System.Text;
using Baketa.Core.Abstractions.Events;
using Baketa.Core.Abstractions.Server;
using Baketa.Core.Events;
using Baketa.Translation.V1;
using Grpc.Net.Client;
using Microsoft.Extensions.Logging;

namespace Baketa.Infrastructure.Services;

/// <summary>
/// Issue #292: OCR+ç¿»è¨³çµ±åˆAIã‚µãƒ¼ãƒãƒ¼ç®¡ç†
/// OCRã¨ç¿»è¨³ã‚’å˜ä¸€ãƒ—ãƒ­ã‚»ã‚¹ã§å®Ÿè¡Œã™ã‚‹ã“ã¨ã§VRAMã‚’å‰Šæ¸›
/// </summary>
public sealed class UnifiedServerManager : IUnifiedAIServerManager
{
    // [Gemini Review Fix] è¨­å®šã®å¤–éƒ¨åŒ– - ãƒã‚¸ãƒƒã‚¯ãƒŠãƒ³ãƒãƒ¼ã‚’å®šæ•°åŒ–
    /// <summary>ã‚µãƒ¼ãƒãƒ¼èµ·å‹•ã‚¿ã‚¤ãƒ ã‚¢ã‚¦ãƒˆï¼ˆç§’ï¼‰- OCR+ç¿»è¨³ä¸¡æ–¹ã®ãƒ¢ãƒ‡ãƒ«ãƒ­ãƒ¼ãƒ‰æ™‚é–“</summary>
    private const int StartupTimeoutSeconds = 300;

    /// <summary>ã‚µãƒ¼ãƒãƒ¼åœæ­¢ã‚¿ã‚¤ãƒ ã‚¢ã‚¦ãƒˆï¼ˆç§’ï¼‰</summary>
    private const int StopTimeoutSeconds = 10;

    /// <summary>gRPCãƒ˜ãƒ«ã‚¹ãƒã‚§ãƒƒã‚¯ã‚¿ã‚¤ãƒ ã‚¢ã‚¦ãƒˆï¼ˆç§’ï¼‰</summary>
    private const int HealthCheckTimeoutSeconds = 5;

    /// <summary>å­¤ç«‹ãƒ—ãƒ­ã‚»ã‚¹Killã‚¿ã‚¤ãƒ ã‚¢ã‚¦ãƒˆï¼ˆç§’ï¼‰</summary>
    private const int ProcessKillTimeoutSeconds = 5;

    private readonly ILogger<UnifiedServerManager> _logger;
    private readonly IEventAggregator? _eventAggregator;
    private readonly int _port;
    private Process? _serverProcess;
    private ProcessJobObject? _jobObject;
    private bool _isReady;
    private bool _disposed;
    private readonly SemaphoreSlim _startLock = new(1, 1);

    /// <summary>
    /// ã‚µãƒ¼ãƒãƒ¼ãŒæº–å‚™å®Œäº†ã‹ã©ã†ã‹
    /// </summary>
    public bool IsReady => _isReady;

    /// <summary>
    /// ã‚µãƒ¼ãƒãƒ¼ãƒãƒ¼ãƒˆ
    /// </summary>
    public int Port => _port;

    /// <summary>
    /// çµ±åˆã‚µãƒ¼ãƒãƒ¼ãŒåˆ©ç”¨å¯èƒ½ã‹ã©ã†ã‹ï¼ˆexe/Pythonã‚¹ã‚¯ãƒªãƒ—ãƒˆãŒå­˜åœ¨ã™ã‚‹ã‹ï¼‰
    /// </summary>
    public bool IsAvailable => ResolveServerExecutable().executablePath != null;

    public UnifiedServerManager(
        int port,
        ILogger<UnifiedServerManager> logger,
        IEventAggregator? eventAggregator = null)
    {
        _port = port;
        _logger = logger;
        _eventAggregator = eventAggregator;

        // Issue #189: Job ObjectåˆæœŸåŒ– - ã‚¾ãƒ³ãƒ“ãƒ—ãƒ­ã‚»ã‚¹å¯¾ç­–
        _jobObject = new ProcessJobObject(logger);
        _logger.LogDebug("[UnifiedServer] Job ObjectåˆæœŸåŒ–: IsValid={IsValid}", _jobObject.IsValid);
    }

    /// <summary>
    /// çµ±åˆã‚µãƒ¼ãƒãƒ¼ã‚’èµ·å‹•ã—ã€æº–å‚™å®Œäº†ã¾ã§å¾…æ©Ÿ
    /// </summary>
    public async Task<bool> StartServerAsync(CancellationToken cancellationToken = default)
    {
        await _startLock.WaitAsync(cancellationToken).ConfigureAwait(false);
        try
        {
            if (_isReady && _serverProcess is { HasExited: false })
            {
                _logger.LogInformation("â™»ï¸ [UnifiedServer] æ—¢å­˜ã‚µãƒ¼ãƒãƒ¼å†åˆ©ç”¨: Port {Port}", _port);
                return true;
            }

            // å­¤ç«‹ãƒ—ãƒ­ã‚»ã‚¹ã®å¼·åˆ¶çµ‚äº†
            await KillOrphanedProcessAsync().ConfigureAwait(false);

            var (executablePath, arguments, workingDir, isExeMode) = ResolveServerExecutable();

            if (string.IsNullOrEmpty(executablePath))
            {
                _logger.LogError("âŒ [UnifiedServer] ã‚µãƒ¼ãƒãƒ¼å®Ÿè¡Œãƒ•ã‚¡ã‚¤ãƒ«ãŒè¦‹ã¤ã‹ã‚Šã¾ã›ã‚“");
                return false;
            }

            _logger.LogInformation("ğŸš€ [UnifiedServer] çµ±åˆAIã‚µãƒ¼ãƒãƒ¼èµ·å‹•é–‹å§‹");
            _logger.LogInformation("  å®Ÿè¡Œãƒ•ã‚¡ã‚¤ãƒ«: {Executable}", executablePath);
            _logger.LogInformation("  å¼•æ•°: {Args}", arguments);
            _logger.LogInformation("  ãƒ¢ãƒ¼ãƒ‰: {Mode}", isExeMode ? "exeï¼ˆé…å¸ƒç‰ˆï¼‰" : "Pythonï¼ˆé–‹ç™ºç‰ˆï¼‰");
            _logger.LogInformation("  WorkingDir: {Dir}", workingDir);

            var startInfo = new ProcessStartInfo
            {
                FileName = executablePath,
                Arguments = arguments,
                UseShellExecute = false,
                RedirectStandardOutput = true,
                RedirectStandardError = true,
                CreateNoWindow = true,
                WorkingDirectory = workingDir,
                StandardOutputEncoding = Encoding.UTF8,
                StandardErrorEncoding = Encoding.UTF8
            };

            // Pythonç‰ˆã®å ´åˆã®ã¿ç’°å¢ƒå¤‰æ•°è¨­å®š
            if (!isExeMode)
            {
                startInfo.Environment["PYTHONIOENCODING"] = "utf-8";
                startInfo.Environment["PYTHONUNBUFFERED"] = "1";
                startInfo.Environment["TOKENIZERS_PARALLELISM"] = "false";
            }

            _serverProcess = new Process { StartInfo = startInfo };

            var readyTcs = new TaskCompletionSource<bool>();
            var errorOutput = new List<string>();

            _serverProcess.OutputDataReceived += (_, e) =>
            {
                if (e.Data == null) return;

                _logger.LogDebug("[UnifiedServer-stdout] {Data}", e.Data);

                // æº–å‚™å®Œäº†æ¤œå‡º
                CheckForReadyMessage(e.Data, readyTcs);
            };

            _serverProcess.ErrorDataReceived += (_, e) =>
            {
                if (e.Data == null) return;

                // [Issue #264] ãƒ¡ãƒ¢ãƒªã‚¨ãƒ©ãƒ¼æ¤œå‡º
                DetectAndPublishServerError(e.Data);

                // [SERVER_START]æ¤œå‡º
                if (e.Data.Contains("[SERVER_START]"))
                {
                    _logger.LogInformation("âœ… [UnifiedServer] [SERVER_START]æ¤œå‡º");
                    if (!readyTcs.Task.IsCompleted)
                    {
                        readyTcs.TrySetResult(true);
                    }
                }

                // ãƒ­ã‚°ãƒ¬ãƒ™ãƒ«åˆ†é¡
                if (e.Data.Contains("Error") || e.Data.Contains("Exception") || e.Data.Contains("Traceback"))
                {
                    _logger.LogError("[UnifiedServer-stderr] {Data}", e.Data);
                    errorOutput.Add(e.Data);
                }
                else if (e.Data.Contains("Warning") || e.Data.Contains("WARN"))
                {
                    _logger.LogWarning("[UnifiedServer-stderr] {Data}", e.Data);
                }
                else
                {
                    _logger.LogDebug("[UnifiedServer-stderr] {Data}", e.Data);
                }
            };

            _serverProcess.Start();
            _serverProcess.BeginOutputReadLine();
            _serverProcess.BeginErrorReadLine();

            _logger.LogInformation("âœ… [UnifiedServer] ãƒ—ãƒ­ã‚»ã‚¹èµ·å‹•å®Œäº† (PID: {PID})", _serverProcess.Id);

            // Issue #189: ãƒ—ãƒ­ã‚»ã‚¹ã‚’Job Objectã«é–¢é€£ä»˜ã‘
            if (_jobObject?.AssignProcess(_serverProcess) == true)
            {
                _logger.LogInformation("âœ… [UnifiedServer] Job Objecté–¢é€£ä»˜ã‘æˆåŠŸ: PID={PID}", _serverProcess.Id);
            }

            // æº–å‚™å®Œäº†ã‚’å¾…æ©Ÿï¼ˆã‚¿ã‚¤ãƒ ã‚¢ã‚¦ãƒˆ: 300ç§’ - OCR+ç¿»è¨³ä¸¡æ–¹ã®ãƒ¢ãƒ‡ãƒ«ãƒ­ãƒ¼ãƒ‰ï¼‰
            using var timeoutCts = CancellationTokenSource.CreateLinkedTokenSource(cancellationToken);
            timeoutCts.CancelAfter(TimeSpan.FromSeconds(StartupTimeoutSeconds));

            try
            {
                var readyTask = readyTcs.Task;
                var completedTask = await Task.WhenAny(
                    readyTask,
                    Task.Delay(Timeout.Infinite, timeoutCts.Token)
                ).ConfigureAwait(false);

                if (completedTask == readyTask && await readyTask.ConfigureAwait(false))
                {
                    _isReady = true;
                    _logger.LogInformation("âœ… [UnifiedServer] çµ±åˆAIã‚µãƒ¼ãƒãƒ¼æº–å‚™å®Œäº†: Port {Port}", _port);
                    return true;
                }
            }
            catch (OperationCanceledException) when (timeoutCts.IsCancellationRequested && !cancellationToken.IsCancellationRequested)
            {
                _logger.LogError("âŒ [UnifiedServer] ã‚µãƒ¼ãƒãƒ¼èµ·å‹•ã‚¿ã‚¤ãƒ ã‚¢ã‚¦ãƒˆï¼ˆ{Timeout}ç§’ï¼‰", StartupTimeoutSeconds);
            }

            // ã‚¿ã‚¤ãƒ ã‚¢ã‚¦ãƒˆã¾ãŸã¯å¤±æ•—
            if (errorOutput.Count > 0)
            {
                _logger.LogError("âŒ [UnifiedServer] èµ·å‹•ã‚¨ãƒ©ãƒ¼: {Errors}", string.Join(Environment.NewLine, errorOutput));
            }

            await StopServerAsync().ConfigureAwait(false);
            return false;
        }
        finally
        {
            _startLock.Release();
        }
    }

    /// <summary>
    /// ã‚µãƒ¼ãƒãƒ¼åœæ­¢
    /// </summary>
    public async Task StopServerAsync()
    {
        if (_serverProcess == null || _serverProcess.HasExited)
        {
            _logger.LogDebug("[UnifiedServer] åœæ­¢å¯¾è±¡ãƒ—ãƒ­ã‚»ã‚¹ãªã—");
            return;
        }

        _logger.LogInformation("ğŸ›‘ [UnifiedServer] ã‚µãƒ¼ãƒãƒ¼åœæ­¢é–‹å§‹: PID {PID}", _serverProcess.Id);

        try
        {
            _serverProcess.Kill(entireProcessTree: true);
            await _serverProcess.WaitForExitAsync().WaitAsync(TimeSpan.FromSeconds(StopTimeoutSeconds)).ConfigureAwait(false);
            _logger.LogInformation("âœ… [UnifiedServer] ã‚µãƒ¼ãƒãƒ¼åœæ­¢å®Œäº†");
        }
        catch (Exception ex)
        {
            _logger.LogWarning(ex, "âš ï¸ [UnifiedServer] ã‚µãƒ¼ãƒãƒ¼åœæ­¢ã‚¨ãƒ©ãƒ¼");
        }
        finally
        {
            _serverProcess?.Dispose();
            _serverProcess = null;
            _isReady = false;
        }
    }

    /// <summary>
    /// [Gemini Review Fix] gRPCã§ã‚µãƒ¼ãƒãƒ¼ã®æº–å‚™çŠ¶æ…‹ã‚’ç¢ºèª
    /// TCPæ¥ç¶šãƒã‚§ãƒƒã‚¯ã§ã¯ãªãã€å®Ÿéš›ã®gRPC IsReady RPCã‚’ä½¿ç”¨
    /// </summary>
    /// <param name="cancellationToken">ã‚­ãƒ£ãƒ³ã‚»ãƒ«ãƒˆãƒ¼ã‚¯ãƒ³</param>
    /// <returns>ã‚µãƒ¼ãƒãƒ¼ãŒæº–å‚™å®Œäº†ã®å ´åˆtrue</returns>
    public async Task<bool> CheckServerHealthAsync(CancellationToken cancellationToken = default)
    {
        if (_serverProcess == null || _serverProcess.HasExited)
        {
            _logger.LogDebug("[UnifiedServer] ãƒ˜ãƒ«ã‚¹ãƒã‚§ãƒƒã‚¯: ãƒ—ãƒ­ã‚»ã‚¹ãŒå­˜åœ¨ã—ã¾ã›ã‚“");
            return false;
        }

        try
        {
            var serverAddress = $"http://127.0.0.1:{_port}";

            using var channel = GrpcChannel.ForAddress(serverAddress, new GrpcChannelOptions
            {
                HttpHandler = new System.Net.Http.SocketsHttpHandler
                {
                    ConnectTimeout = TimeSpan.FromSeconds(HealthCheckTimeoutSeconds)
                }
            });

            var client = new TranslationService.TranslationServiceClient(channel);

            // gRPC IsReady RPCã‚’å‘¼ã³å‡ºã—
            var response = await client.IsReadyAsync(
                new IsReadyRequest(),
                deadline: DateTime.UtcNow.AddSeconds(HealthCheckTimeoutSeconds),
                cancellationToken: cancellationToken
            ).ConfigureAwait(false);

            _logger.LogDebug(
                "[UnifiedServer] gRPCãƒ˜ãƒ«ã‚¹ãƒã‚§ãƒƒã‚¯çµæœ: IsReady={IsReady}, Status={Status}",
                response.IsReady,
                response.Status);

            return response.IsReady;
        }
        catch (Grpc.Core.RpcException ex)
        {
            _logger.LogWarning(ex, "[UnifiedServer] gRPCãƒ˜ãƒ«ã‚¹ãƒã‚§ãƒƒã‚¯å¤±æ•—: StatusCode={StatusCode}", ex.StatusCode);
            return false;
        }
        catch (Exception ex)
        {
            _logger.LogWarning(ex, "[UnifiedServer] ãƒ˜ãƒ«ã‚¹ãƒã‚§ãƒƒã‚¯ã‚¨ãƒ©ãƒ¼");
            return false;
        }
    }

    /// <summary>
    /// æº–å‚™å®Œäº†ãƒ¡ãƒƒã‚»ãƒ¼ã‚¸æ¤œå‡º
    /// </summary>
    private void CheckForReadyMessage(string line, TaskCompletionSource<bool> tcs)
    {
        if (tcs.Task.IsCompleted) return;

        // "is running on" ã¾ãŸã¯ "[SERVER_START]" ã§æº–å‚™å®Œäº†åˆ¤å®š
        if (line.Contains("is running on") || line.Contains("[SERVER_START]"))
        {
            _logger.LogDebug("[UnifiedServer] æº–å‚™å®Œäº†ãƒ¡ãƒƒã‚»ãƒ¼ã‚¸æ¤œå‡º: {Line}", line);
            tcs.TrySetResult(true);
        }
    }

    /// <summary>
    /// ã‚µãƒ¼ãƒãƒ¼å®Ÿè¡Œãƒ•ã‚¡ã‚¤ãƒ«ã‚’è§£æ±º
    /// </summary>
    private (string? executablePath, string arguments, string workingDir, bool isExeMode) ResolveServerExecutable()
    {
        // å„ªå…ˆé †ä½: 1. exeç‰ˆï¼ˆé…å¸ƒç”¨ï¼‰ 2. Pythonã‚¹ã‚¯ãƒªãƒ—ãƒˆï¼ˆé–‹ç™ºç”¨ï¼‰

        // exeç‰ˆãƒã‚§ãƒƒã‚¯
        var exePath = Path.Combine(AppContext.BaseDirectory, "grpc_server", "BaketaUnifiedServer", "BaketaUnifiedServer.exe");
        if (File.Exists(exePath))
        {
            _logger.LogInformation("âœ… [UnifiedServer] exeç‰ˆä½¿ç”¨: {Path}", exePath);
            return (exePath, $"--port {_port}", Path.GetDirectoryName(exePath)!, true);
        }

        // Pythonç‰ˆãƒã‚§ãƒƒã‚¯ï¼ˆé–‹ç™ºæ™‚ï¼‰
        var grpcServerDir = Path.Combine(AppContext.BaseDirectory, "grpc_server");
        var scriptPath = Path.Combine(grpcServerDir, "unified_server.py");

        // grpc_serverãƒ‡ã‚£ãƒ¬ã‚¯ãƒˆãƒªãŒè¦‹ã¤ã‹ã‚‰ãªã„å ´åˆã¯ãƒ—ãƒ­ã‚¸ã‚§ã‚¯ãƒˆãƒ«ãƒ¼ãƒˆã‹ã‚‰æ¢ç´¢
        if (!File.Exists(scriptPath))
        {
            var projectRoot = FindProjectRoot(AppContext.BaseDirectory);
            if (projectRoot != null)
            {
                grpcServerDir = Path.Combine(projectRoot, "grpc_server");
                scriptPath = Path.Combine(grpcServerDir, "unified_server.py");
            }
        }

        if (File.Exists(scriptPath))
        {
            // Pythonå®Ÿè¡Œãƒ•ã‚¡ã‚¤ãƒ«ã‚’æ¢ç´¢
            var pythonPath = FindPythonExecutable();
            if (pythonPath != null)
            {
                _logger.LogInformation("âœ… [UnifiedServer] Pythonç‰ˆä½¿ç”¨: {Script} (Python: {Python})", scriptPath, pythonPath);
                return (pythonPath, $"\"{scriptPath}\" --port {_port}", grpcServerDir, false);
            }
        }

        _logger.LogWarning("âš ï¸ [UnifiedServer] å®Ÿè¡Œãƒ•ã‚¡ã‚¤ãƒ«ãŒè¦‹ã¤ã‹ã‚Šã¾ã›ã‚“ (exe: {ExePath}, script: {ScriptPath})", exePath, scriptPath);
        return (null, "", "", false);
    }

    /// <summary>
    /// Pythonå®Ÿè¡Œãƒ•ã‚¡ã‚¤ãƒ«ã‚’æ¢ç´¢
    /// </summary>
    private string? FindPythonExecutable()
    {
        // .venvç’°å¢ƒã‚’ãƒã‚§ãƒƒã‚¯
        var projectRoot = FindProjectRoot(AppContext.BaseDirectory);
        if (projectRoot != null)
        {
            var venvPython = Path.Combine(projectRoot, ".venv", "Scripts", "python.exe");
            if (File.Exists(venvPython))
            {
                return venvPython;
            }
        }

        // vendor Python
        var vendorPython = Path.Combine(AppContext.BaseDirectory, "vendor", "python", "python.exe");
        if (File.Exists(vendorPython))
        {
            return vendorPython;
        }

        // pyenv Python
        var pyenvPython = Path.Combine(
            Environment.GetFolderPath(Environment.SpecialFolder.UserProfile),
            ".pyenv", "pyenv-win", "versions", "3.10.9", "python.exe");
        if (File.Exists(pyenvPython))
        {
            return pyenvPython;
        }

        // ã‚·ã‚¹ãƒ†ãƒ Python
        try
        {
            var psi = new ProcessStartInfo
            {
                FileName = "where",
                Arguments = "python",
                RedirectStandardOutput = true,
                UseShellExecute = false,
                CreateNoWindow = true
            };
            using var proc = Process.Start(psi);
            if (proc != null)
            {
                var output = proc.StandardOutput.ReadLine();
                if (!string.IsNullOrEmpty(output) && File.Exists(output))
                {
                    return output;
                }
            }
        }
        catch { /* ignore */ }

        return null;
    }

    /// <summary>
    /// ãƒ—ãƒ­ã‚¸ã‚§ã‚¯ãƒˆãƒ«ãƒ¼ãƒˆãƒ‡ã‚£ãƒ¬ã‚¯ãƒˆãƒªã‚’.slnãƒ•ã‚¡ã‚¤ãƒ«ã‚’åŸºç‚¹ã«æ¢ç´¢
    /// </summary>
    private static string? FindProjectRoot(string startPath)
    {
        var directory = new DirectoryInfo(startPath);
        while (directory != null && !directory.GetFiles("*.sln").Any())
        {
            directory = directory.Parent;
        }
        return directory?.FullName;
    }

    /// <summary>
    /// å­¤ç«‹ãƒ—ãƒ­ã‚»ã‚¹ã‚’å¼·åˆ¶çµ‚äº†
    /// [Gemini Review Fix] ç«¶åˆçŠ¶æ…‹å¯¾ç­–: ãƒ—ãƒ­ã‚»ã‚¹å–å¾—ã¨Killã®é–“ã§ãƒ—ãƒ­ã‚»ã‚¹ãŒçµ‚äº†ã™ã‚‹å¯èƒ½æ€§ã«å¯¾å¿œ
    /// </summary>
    private async Task KillOrphanedProcessAsync()
    {
        try
        {
            _logger.LogDebug("[UnifiedServer] å­¤ç«‹ãƒ—ãƒ­ã‚»ã‚¹ãƒã‚§ãƒƒã‚¯: Port {Port}", _port);

            var netstatProcess = new Process
            {
                StartInfo = new ProcessStartInfo
                {
                    FileName = "netstat",
                    Arguments = "-ano",
                    RedirectStandardOutput = true,
                    UseShellExecute = false,
                    CreateNoWindow = true
                }
            };

            netstatProcess.Start();
            var output = await netstatProcess.StandardOutput.ReadToEndAsync().ConfigureAwait(false);
            await netstatProcess.WaitForExitAsync().ConfigureAwait(false);

            var lines = output.Split('\n');
            foreach (var line in lines)
            {
                if (line.Contains($":{_port}") && line.Contains("LISTENING"))
                {
                    var parts = line.Split(new[] { ' ' }, StringSplitOptions.RemoveEmptyEntries);
                    if (parts.Length > 0 && int.TryParse(parts[^1], out var pid))
                    {
                        _logger.LogWarning("âš ï¸ [UnifiedServer] å­¤ç«‹ãƒ—ãƒ­ã‚»ã‚¹æ¤œå‡º: PID {Pid}", pid);
                        await TryKillProcessAsync(pid).ConfigureAwait(false);
                        break;
                    }
                }
            }
        }
        catch (Exception ex)
        {
            _logger.LogWarning(ex, "âš ï¸ [UnifiedServer] å­¤ç«‹ãƒ—ãƒ­ã‚»ã‚¹ãƒã‚§ãƒƒã‚¯ã‚¨ãƒ©ãƒ¼");
        }
    }

    /// <summary>
    /// [Gemini Review Fix] ãƒ—ãƒ­ã‚»ã‚¹çµ‚äº†ã‚’å®‰å…¨ã«è©¦è¡Œ
    /// ç«¶åˆçŠ¶æ…‹ã«å¯¾å¿œ: ãƒ—ãƒ­ã‚»ã‚¹å–å¾—ã‹ã‚‰Killã¾ã§ã®é–“ã«çµ‚äº†ã™ã‚‹å¯èƒ½æ€§ã‚’è€ƒæ…®
    /// </summary>
    private async Task TryKillProcessAsync(int pid)
    {
        // è¨±å¯ã•ã‚ŒãŸãƒ—ãƒ­ã‚»ã‚¹åãƒªã‚¹ãƒˆ
        string[] allowedProcessNames =
        [
            "python",
            "BaketaUnifiedServer",
            "BaketaTranslationServer",
            "BaketaSuryaOcrServer"
        ];

        try
        {
            // ãƒ—ãƒ­ã‚»ã‚¹å–å¾—
            Process orphanProcess;
            try
            {
                orphanProcess = Process.GetProcessById(pid);
            }
            catch (ArgumentException)
            {
                // ãƒ—ãƒ­ã‚»ã‚¹ãŒæ—¢ã«çµ‚äº†ã—ã¦ã„ã‚‹
                _logger.LogDebug("[UnifiedServer] PID {Pid} ã¯æ—¢ã«çµ‚äº†ã—ã¦ã„ã¾ã™", pid);
                return;
            }

            // ãƒ—ãƒ­ã‚»ã‚¹åã‚’å–å¾—ï¼ˆHasExitedãƒã‚§ãƒƒã‚¯ä»˜ãï¼‰
            string processName;
            try
            {
                if (orphanProcess.HasExited)
                {
                    _logger.LogDebug("[UnifiedServer] PID {Pid} ã¯æ—¢ã«çµ‚äº†ã—ã¦ã„ã¾ã™", pid);
                    return;
                }
                processName = orphanProcess.ProcessName;
            }
            catch (InvalidOperationException)
            {
                // ãƒ—ãƒ­ã‚»ã‚¹ãŒçµ‚äº†ã—ãŸ
                _logger.LogDebug("[UnifiedServer] PID {Pid} ã¯å–å¾—ä¸­ã«çµ‚äº†ã—ã¾ã—ãŸ", pid);
                return;
            }

            // è¨±å¯ã•ã‚ŒãŸãƒ—ãƒ­ã‚»ã‚¹ã®ã¿çµ‚äº†
            var isAllowed = allowedProcessNames.Any(name =>
                processName.Contains(name, StringComparison.OrdinalIgnoreCase));

            if (!isAllowed)
            {
                _logger.LogDebug("[UnifiedServer] PID {Pid} ({Name}) ã¯è¨±å¯ãƒªã‚¹ãƒˆå¤–ã®ãŸã‚ã‚¹ã‚­ãƒƒãƒ—", pid, processName);
                return;
            }

            _logger.LogInformation("ğŸ”¥ [UnifiedServer] å­¤ç«‹ãƒ—ãƒ­ã‚»ã‚¹å¼·åˆ¶çµ‚äº†: PID {Pid}, Name {Name}", pid, processName);

            try
            {
                orphanProcess.Kill(entireProcessTree: true);
                await orphanProcess.WaitForExitAsync().WaitAsync(TimeSpan.FromSeconds(ProcessKillTimeoutSeconds)).ConfigureAwait(false);
                _logger.LogInformation("âœ… [UnifiedServer] å­¤ç«‹ãƒ—ãƒ­ã‚»ã‚¹çµ‚äº†å®Œäº†: PID {Pid}", pid);
            }
            catch (InvalidOperationException)
            {
                // ãƒ—ãƒ­ã‚»ã‚¹ãŒæ—¢ã«çµ‚äº†
                _logger.LogDebug("[UnifiedServer] PID {Pid} ã¯Killä¸­ã«çµ‚äº†ã—ã¾ã—ãŸ", pid);
            }
            catch (TimeoutException)
            {
                _logger.LogWarning("[UnifiedServer] PID {Pid} ã®çµ‚äº†å¾…æ©ŸãŒã‚¿ã‚¤ãƒ ã‚¢ã‚¦ãƒˆ", pid);
            }
        }
        catch (Exception ex)
        {
            _logger.LogWarning(ex, "âš ï¸ [UnifiedServer] ãƒ—ãƒ­ã‚»ã‚¹çµ‚äº†å¤±æ•—: PID {Pid}", pid);
        }
    }

    /// <summary>
    /// ãƒ¡ãƒ¢ãƒªã‚¨ãƒ©ãƒ¼ç­‰ã‚’æ¤œå‡ºã—ã¦ã‚¤ãƒ™ãƒ³ãƒˆç™ºè¡Œ
    /// </summary>
    private void DetectAndPublishServerError(string line)
    {
        ServerErrorDetector.DetectAndPublish(
            line,
            ServerErrorSources.UnifiedServer,
            $"Port:{_port}",
            _eventAggregator,
            _logger);
    }

    /// <summary>
    /// éåŒæœŸç ´æ£„
    /// </summary>
    public async ValueTask DisposeAsync()
    {
        if (_disposed) return;
        _disposed = true;

        _logger.LogInformation("ğŸ›‘ [UnifiedServer] éåŒæœŸç ´æ£„é–‹å§‹");

        await StopServerAsync().ConfigureAwait(false);

        try
        {
            _startLock?.Dispose();
        }
        catch { /* ignore */ }

        try
        {
            _jobObject?.Dispose();
            _jobObject = null;
        }
        catch { /* ignore */ }

        _logger.LogInformation("âœ… [UnifiedServer] éåŒæœŸç ´æ£„å®Œäº†");

        GC.SuppressFinalize(this);
    }
}
