using System;
using System.Collections.Generic;
using System.Linq;
using System.Threading;
using System.Threading.Tasks;
using Baketa.Core.Abstractions.Events;
using Baketa.Core.Abstractions.Translation;
using Baketa.Core.Events.Diagnostics;
using Baketa.Core.Events.EventTypes;
using Microsoft.Extensions.Configuration;
using Microsoft.Extensions.Logging;
using TransModels = Baketa.Core.Translation.Models;

namespace Baketa.Infrastructure.Translation;

/// <summary>
/// ç¿»è¨³ã‚µãƒ¼ãƒ“ã‚¹ã®æ¨™æº–å®Ÿè£…
/// </summary>
public class DefaultTranslationService : ITranslationService
{
    private readonly ILogger<DefaultTranslationService> _logger;
    private readonly List<ITranslationEngine> _availableEngines;
    private readonly IConfiguration _configuration;
    private readonly IEventAggregator? _eventAggregator;

    /// <summary>
    /// ã‚³ãƒ³ã‚¹ãƒˆãƒ©ã‚¯ã‚¿
    /// </summary>
    /// <param name="logger">ãƒ­ã‚¬ãƒ¼</param>
    /// <param name="engines">åˆ©ç”¨å¯èƒ½ãªç¿»è¨³ã‚¨ãƒ³ã‚¸ãƒ³ã®ã‚³ãƒ¬ã‚¯ã‚·ãƒ§ãƒ³</param>
    /// <param name="configuration">è¨­å®šã‚µãƒ¼ãƒ“ã‚¹</param>
    /// <param name="eventAggregator">ã‚¤ãƒ™ãƒ³ãƒˆé›†ç´„ï¼ˆã‚ªãƒ—ã‚·ãƒ§ãƒ³ï¼‰</param>
    public DefaultTranslationService(
        ILogger<DefaultTranslationService> logger,
        IEnumerable<ITranslationEngine> engines,
        IConfiguration configuration,
        IEventAggregator? eventAggregator = null)
    {
        _logger = logger ?? throw new ArgumentNullException(nameof(logger));
        _availableEngines = engines?.ToList() ?? throw new ArgumentNullException(nameof(engines));
        _configuration = configuration ?? throw new ArgumentNullException(nameof(configuration));
        _eventAggregator = eventAggregator;

        Console.WriteLine($"ğŸ”§ [DEBUG] DefaultTranslationServiceä½œæˆ - ã‚¨ãƒ³ã‚¸ãƒ³æ•°: {_availableEngines.Count}");
        _logger.LogInformation("DefaultTranslationServiceä½œæˆ - ã‚¨ãƒ³ã‚¸ãƒ³æ•°: {Count}", _availableEngines.Count);

        foreach (var engine in _availableEngines)
        {
            Console.WriteLine($"ğŸ”§ [DEBUG] ç™»éŒ²ã‚¨ãƒ³ã‚¸ãƒ³: {engine.Name} ({engine.GetType().Name})");
            _logger.LogInformation("ç™»éŒ²ã‚¨ãƒ³ã‚¸ãƒ³: {Name} ({Type})", engine.Name, engine.GetType().Name);
        }

        if (_availableEngines.Count == 0)
        {
            throw new ArgumentException("å°‘ãªãã¨ã‚‚1ã¤ã®ç¿»è¨³ã‚¨ãƒ³ã‚¸ãƒ³ãŒå¿…è¦ã§ã™ã€‚", nameof(engines));
        }

        // è¨­å®šã‹ã‚‰ç¿»è¨³ã‚¨ãƒ³ã‚¸ãƒ³ã‚’é¸æŠ
        ActiveEngine = SelectEngineFromConfiguration();
        Console.WriteLine($"ğŸ¯ [CONFIG] ã‚¢ã‚¯ãƒ†ã‚£ãƒ–ã‚¨ãƒ³ã‚¸ãƒ³è¨­å®šå®Œäº†: {ActiveEngine.Name} ({ActiveEngine.GetType().Name})");
        _logger.LogInformation("ã‚¢ã‚¯ãƒ†ã‚£ãƒ–ã‚¨ãƒ³ã‚¸ãƒ³è¨­å®šå®Œäº†: {Name} ({Type})", ActiveEngine.Name, ActiveEngine.GetType().Name);
    }

    /// <summary>
    /// åˆ©ç”¨å¯èƒ½ãªç¿»è¨³ã‚¨ãƒ³ã‚¸ãƒ³ã‚’å–å¾—ã—ã¾ã™
    /// </summary>
    /// <returns>åˆ©ç”¨å¯èƒ½ãªç¿»è¨³ã‚¨ãƒ³ã‚¸ãƒ³ã®ã‚³ãƒ¬ã‚¯ã‚·ãƒ§ãƒ³</returns>
    public IReadOnlyList<ITranslationEngine> GetAvailableEngines() => _availableEngines.AsReadOnly();

    /// <summary>
    /// ç¾åœ¨ã‚¢ã‚¯ãƒ†ã‚£ãƒ–ãªç¿»è¨³ã‚¨ãƒ³ã‚¸ãƒ³ã‚’å–å¾—ã—ã¾ã™
    /// </summary>
    public ITranslationEngine ActiveEngine { get; private set; }

    /// <summary>
    /// è¨­å®šãƒ•ã‚¡ã‚¤ãƒ«ã‹ã‚‰ãƒ‡ãƒ•ã‚©ãƒ«ãƒˆã‚¨ãƒ³ã‚¸ãƒ³ã‚’é¸æŠã—ã¾ã™
    /// </summary>
    /// <returns>é¸æŠã•ã‚ŒãŸã‚¨ãƒ³ã‚¸ãƒ³ï¼ˆè¨­å®šã«ãƒãƒƒãƒã—ãªã„å ´åˆã¯æœ€åˆã®ã‚¨ãƒ³ã‚¸ãƒ³ï¼‰</returns>
    private ITranslationEngine SelectEngineFromConfiguration()
    {
        var defaultEngineName = _configuration["Translation:DefaultEngine"];

        Console.WriteLine($"ğŸ” [CONFIG] appsettings.jsonè¨­å®šèª­ã¿è¾¼ã¿: Translation:DefaultEngine = '{defaultEngineName}'");
        _logger.LogInformation("è¨­å®šã‹ã‚‰ãƒ‡ãƒ•ã‚©ãƒ«ãƒˆã‚¨ãƒ³ã‚¸ãƒ³èª­ã¿è¾¼ã¿: {DefaultEngine}", defaultEngineName);

        if (!string.IsNullOrEmpty(defaultEngineName))
        {
            // è¨­å®šã•ã‚ŒãŸã‚¨ãƒ³ã‚¸ãƒ³åã«åŸºã¥ã„ã¦ãƒãƒƒãƒãƒ³ã‚°ã‚’è©¦è¡Œ
            var matchedEngine = FindEngineByName(defaultEngineName);
            if (matchedEngine != null)
            {
                Console.WriteLine($"âœ… [CONFIG] è¨­å®šãƒãƒƒãƒæˆåŠŸ: {matchedEngine.Name} ã‚’ä½¿ç”¨");
                _logger.LogInformation("è¨­å®šãƒãƒƒãƒæˆåŠŸ: {EngineName} ã‚’ä½¿ç”¨", matchedEngine.Name);
                return matchedEngine;
            }

            Console.WriteLine($"âš ï¸ [CONFIG] è¨­å®šã‚¨ãƒ³ã‚¸ãƒ³ '{defaultEngineName}' ãŒè¦‹ã¤ã‹ã‚Šã¾ã›ã‚“ã€‚ãƒ•ã‚©ãƒ¼ãƒ«ãƒãƒƒã‚¯å®Ÿè¡Œ");
            _logger.LogWarning("è¨­å®šã‚¨ãƒ³ã‚¸ãƒ³ '{DefaultEngine}' ãŒè¦‹ã¤ã‹ã‚Šã¾ã›ã‚“ã€‚ãƒ•ã‚©ãƒ¼ãƒ«ãƒãƒƒã‚¯ã—ã¾ã™", defaultEngineName);
        }

        // ãƒ•ã‚©ãƒ¼ãƒ«ãƒãƒƒã‚¯: æœ€åˆã®ã‚¨ãƒ³ã‚¸ãƒ³ã‚’ä½¿ç”¨
        var fallbackEngine = _availableEngines[0];
        Console.WriteLine($"ğŸ”„ [FALLBACK] ãƒ‡ãƒ•ã‚©ãƒ«ãƒˆã‚¨ãƒ³ã‚¸ãƒ³é¸æŠ: {fallbackEngine.Name}");
        _logger.LogInformation("ãƒ•ã‚©ãƒ¼ãƒ«ãƒãƒƒã‚¯ã§ãƒ‡ãƒ•ã‚©ãƒ«ãƒˆã‚¨ãƒ³ã‚¸ãƒ³é¸æŠ: {EngineName}", fallbackEngine.Name);
        return fallbackEngine;
    }

    /// <summary>
    /// ã‚¨ãƒ³ã‚¸ãƒ³åã«åŸºã¥ã„ã¦ãƒãƒƒãƒã™ã‚‹ã‚¨ãƒ³ã‚¸ãƒ³ã‚’æ¤œç´¢ã—ã¾ã™
    /// </summary>
    /// <param name="engineName">æ¤œç´¢ã™ã‚‹ã‚¨ãƒ³ã‚¸ãƒ³å</param>
    /// <returns>ãƒãƒƒãƒã—ãŸã‚¨ãƒ³ã‚¸ãƒ³ï¼ˆè¦‹ã¤ã‹ã‚‰ãªã„å ´åˆã¯nullï¼‰</returns>
    private ITranslationEngine? FindEngineByName(string engineName)
    {
        // 1. å®Œå…¨ä¸€è‡´æ¤œç´¢
        var exactMatch = _availableEngines.FirstOrDefault(e =>
            string.Equals(e.Name, engineName, StringComparison.OrdinalIgnoreCase));
        if (exactMatch != null)
        {
            Console.WriteLine($"ğŸ“ [MATCH] å®Œå…¨ä¸€è‡´: {exactMatch.Name}");
            return exactMatch;
        }

        // 2. ã‚¨ã‚¤ãƒªã‚¢ã‚¹æ¤œç´¢ï¼ˆNLLB200 â†’ gRPC Translation Engineï¼‰
        var aliasMatch = _availableEngines.FirstOrDefault(e =>
            e.Aliases.Any(alias => string.Equals(alias, engineName, StringComparison.OrdinalIgnoreCase)));
        if (aliasMatch != null)
        {
            Console.WriteLine($"ğŸ“ [MATCH] ã‚¨ã‚¤ãƒªã‚¢ã‚¹ä¸€è‡´: {aliasMatch.Name} (alias: {engineName})");
            return aliasMatch;
        }

        // 3. éƒ¨åˆ†ä¸€è‡´æ¤œç´¢ï¼ˆNLLB-200 â†’ 'NLLB' å«ã‚€ã‚¨ãƒ³ã‚¸ãƒ³ï¼‰
        var partialMatch = _availableEngines.FirstOrDefault(e =>
            e.Name.Contains(engineName, StringComparison.OrdinalIgnoreCase) ||
            engineName.Contains(e.Name, StringComparison.OrdinalIgnoreCase));
        if (partialMatch != null)
        {
            Console.WriteLine($"ğŸ“ [MATCH] éƒ¨åˆ†ä¸€è‡´: {partialMatch.Name}");
            return partialMatch;
        }

        // 4. ã‚¨ãƒ³ã‚¸ãƒ³ã‚¿ã‚¤ãƒ—åã«ã‚ˆã‚‹æ¤œç´¢
        var typeMatch = _availableEngines.FirstOrDefault(e =>
            e.GetType().Name.Contains(engineName, StringComparison.OrdinalIgnoreCase));
        if (typeMatch != null)
        {
            Console.WriteLine($"ğŸ“ [MATCH] ã‚¿ã‚¤ãƒ—åä¸€è‡´: {typeMatch.GetType().Name}");
            return typeMatch;
        }

        Console.WriteLine($"âŒ [MATCH] ãƒãƒƒãƒå¤±æ•—: '{engineName}' ã«è©²å½“ã™ã‚‹ã‚¨ãƒ³ã‚¸ãƒ³ãŒè¦‹ã¤ã‹ã‚Šã¾ã›ã‚“");
        return null;
    }

    /// <summary>
    /// æŒ‡å®šã•ã‚ŒãŸåå‰ã®ã‚¨ãƒ³ã‚¸ãƒ³ã‚’ã‚¢ã‚¯ãƒ†ã‚£ãƒ–ã«ã—ã¾ã™
    /// </summary>
    /// <param name="engineName">ã‚¢ã‚¯ãƒ†ã‚£ãƒ–ã«ã™ã‚‹ã‚¨ãƒ³ã‚¸ãƒ³å</param>
    /// <returns>æˆåŠŸã™ã‚Œã°true</returns>
    public async Task<bool> SetActiveEngineAsync(string engineName)
    {
        if (string.IsNullOrEmpty(engineName))
        {
            throw new ArgumentException("ã‚¨ãƒ³ã‚¸ãƒ³åãŒç„¡åŠ¹ã§ã™ã€‚", nameof(engineName));
        }

        var engine = _availableEngines.FirstOrDefault(e =>
            string.Equals(e.Name, engineName, StringComparison.OrdinalIgnoreCase));

        if (engine == null)
        {
            _logger.LogWarning("æŒ‡å®šã•ã‚ŒãŸã‚¨ãƒ³ã‚¸ãƒ³ '{EngineName}' ãŒè¦‹ã¤ã‹ã‚Šã¾ã›ã‚“ã€‚", engineName);
            return false;
        }

        // ã‚¨ãƒ³ã‚¸ãƒ³ãŒæº–å‚™ã§ãã¦ã„ã‚‹ã‹ç¢ºèª
        var isReady = await engine.IsReadyAsync().ConfigureAwait(false);
        if (!isReady)
        {
            var initResult = await engine.InitializeAsync().ConfigureAwait(false);
            if (!initResult)
            {
                _logger.LogError("ã‚¨ãƒ³ã‚¸ãƒ³ '{EngineName}' ã®åˆæœŸåŒ–ã«å¤±æ•—ã—ã¾ã—ãŸã€‚", engineName);
                return false;
            }
        }

        ActiveEngine = engine;
        _logger.LogInformation("ã‚¢ã‚¯ãƒ†ã‚£ãƒ–ãªç¿»è¨³ã‚¨ãƒ³ã‚¸ãƒ³ã‚’ '{EngineName}' ã«å¤‰æ›´ã—ã¾ã—ãŸã€‚", engineName);
        return true;
    }

    /// <summary>
    /// ãƒ†ã‚­ã‚¹ãƒˆã‚’ç¿»è¨³ã—ã¾ã™
    /// </summary>
    /// <param name="text">ç¿»è¨³å…ƒãƒ†ã‚­ã‚¹ãƒˆ</param>
    /// <param name="sourceLang">å…ƒè¨€èª</param>
    /// <param name="targetLang">å¯¾è±¡è¨€èª</param>
    /// <param name="context">ç¿»è¨³ã‚³ãƒ³ãƒ†ã‚­ã‚¹ãƒˆï¼ˆã‚ªãƒ—ã‚·ãƒ§ãƒ³ï¼‰</param>
    /// <param name="cancellationToken">ã‚­ãƒ£ãƒ³ã‚»ãƒ¬ãƒ¼ã‚·ãƒ§ãƒ³ãƒˆãƒ¼ã‚¯ãƒ³</param>
    /// <returns>ç¿»è¨³çµæœ</returns>
    public async Task<TransModels.TranslationResponse> TranslateAsync(
        string text,
        TransModels.Language sourceLang,
        TransModels.Language targetLang,
        string? context = null,
        CancellationToken cancellationToken = default)
    {
        ArgumentNullException.ThrowIfNull(text, nameof(text));
        ArgumentNullException.ThrowIfNull(sourceLang, nameof(sourceLang));
        ArgumentNullException.ThrowIfNull(targetLang, nameof(targetLang));

        _logger.LogInformation("ç¿»è¨³é–‹å§‹ - ãƒ†ã‚­ã‚¹ãƒˆ: '{Text}', ã‚¨ãƒ³ã‚¸ãƒ³: {Engine}", text, ActiveEngine.Name);

        // TransModelsã‚’ãã®ã¾ã¾ä½¿ç”¨
        var request = new TransModels.TranslationRequest
        {
            SourceText = text,
            SourceLanguage = sourceLang,
            TargetLanguage = targetLang,
            Context = context != null ? new TransModels.TranslationContext { DialogueId = context } : null
        };

        // ğŸ”¥ [PHASE13_DEBUG] ç¿»è¨³ã‚¨ãƒ³ã‚¸ãƒ³å‘¼ã³å‡ºã—å‰ã®ãƒ‡ãƒãƒƒã‚°æƒ…å ±
        _logger.LogDebug("ğŸ”¥ [PHASE13_DEBUG] DefaultTranslationService.TranslateAsync ç¿»è¨³ã‚¨ãƒ³ã‚¸ãƒ³å‘¼ã³å‡ºã—é–‹å§‹");
        _logger.LogDebug("ğŸ”¥ [PHASE13_DEBUG] - ActiveEngine: {EngineName} ({EngineType})", ActiveEngine.Name, ActiveEngine.GetType().Name);
        _logger.LogDebug("ğŸ”¥ [PHASE13_DEBUG] - Request Type: {RequestType}", request.GetType().FullName);
        _logger.LogDebug("ğŸ”¥ [PHASE13_DEBUG] - Request SourceText: '{SourceText}'", request.SourceText);
        _logger.LogDebug("ğŸ”¥ [PHASE13_DEBUG] - Request SourceLanguage: {SourceLanguage}", request.SourceLanguage);
        _logger.LogDebug("ğŸ”¥ [PHASE13_DEBUG] - Request TargetLanguage: {TargetLanguage}", request.TargetLanguage);
        Console.WriteLine($"ğŸ”¥ [PHASE13_DEBUG] DefaultTranslationService -> {ActiveEngine.GetType().Name} å‘¼ã³å‡ºã—é–‹å§‹");
        Console.WriteLine($"ğŸ”¥ [PHASE13_DEBUG] Requestå‹: {request.GetType().FullName}");
        Console.WriteLine($"ğŸ”¥ [PHASE13_DEBUG] SourceText: '{request.SourceText}'");

        // ç¿»è¨³å®Ÿè¡Œ
        var result = await ActiveEngine.TranslateAsync(request, cancellationToken).ConfigureAwait(false);

        // ğŸ”¥ [PHASE13_DEBUG] ç¿»è¨³ã‚¨ãƒ³ã‚¸ãƒ³å‘¼ã³å‡ºã—å¾Œã®ãƒ‡ãƒãƒƒã‚°æƒ…å ±
        _logger.LogDebug("ğŸ”¥ [PHASE13_DEBUG] DefaultTranslationService.TranslateAsync ç¿»è¨³ã‚¨ãƒ³ã‚¸ãƒ³å‘¼ã³å‡ºã—å®Œäº†");
        _logger.LogDebug("ğŸ”¥ [PHASE13_DEBUG] - Result Type: {ResultType}", result?.GetType().FullName ?? "null");
        _logger.LogDebug("ğŸ”¥ [PHASE13_DEBUG] - Result IsSuccess: {IsSuccess}", result?.IsSuccess ?? false);
        _logger.LogDebug("ğŸ”¥ [PHASE13_DEBUG] - Result TranslatedText: '{TranslatedText}'", result?.TranslatedText ?? "null");
        Console.WriteLine($"ğŸ”¥ [PHASE13_DEBUG] DefaultTranslationService ç¿»è¨³ã‚¨ãƒ³ã‚¸ãƒ³å‘¼ã³å‡ºã—å®Œäº† - IsSuccess: {result?.IsSuccess}");
        Console.WriteLine($"ğŸ”¥ [PHASE13_DEBUG] TranslatedText: '{result?.TranslatedText ?? "null"}'");
        _logger.LogInformation("ç¿»è¨³çµæœ - IsSuccess: {IsSuccess}, Text: '{Text}'", result?.IsSuccess, result?.TranslatedText);

        return result!;
    }

    /// <summary>
    /// è¤‡æ•°ã®ãƒ†ã‚­ã‚¹ãƒˆã‚’ãƒãƒƒãƒç¿»è¨³ã—ã¾ã™
    /// </summary>
    /// <param name="texts">ç¿»è¨³å…ƒãƒ†ã‚­ã‚¹ãƒˆã®ã‚³ãƒ¬ã‚¯ã‚·ãƒ§ãƒ³</param>
    /// <param name="sourceLang">å…ƒè¨€èª</param>
    /// <param name="targetLang">å¯¾è±¡è¨€èª</param>
    /// <param name="context">ç¿»è¨³ã‚³ãƒ³ãƒ†ã‚­ã‚¹ãƒˆï¼ˆã‚ªãƒ—ã‚·ãƒ§ãƒ³ï¼‰</param>
    /// <param name="cancellationToken">ã‚­ãƒ£ãƒ³ã‚»ãƒ¬ãƒ¼ã‚·ãƒ§ãƒ³ãƒˆãƒ¼ã‚¯ãƒ³</param>
    /// <returns>ç¿»è¨³çµæœã®ã‚³ãƒ¬ã‚¯ã‚·ãƒ§ãƒ³</returns>
    public async Task<IReadOnlyList<TransModels.TranslationResponse>> TranslateBatchAsync(
        IReadOnlyList<string> texts,
        TransModels.Language sourceLang,
        TransModels.Language targetLang,
        string? context = null,
        CancellationToken cancellationToken = default)
    {
        // ğŸ”¥ [LLAMA_DEBUG] DefaultTranslationService.TranslateBatchAsyncåˆ°é”ç¢ºèª
        Console.WriteLine($"ğŸ”¥ğŸ”¥ğŸ”¥ [LLAMA_DEBUG] DefaultTranslationService.TranslateBatchAsyncåˆ°é”ï¼");
        Console.WriteLine($"ğŸ”¥ğŸ”¥ğŸ”¥ [LLAMA_DEBUG] ãƒ†ã‚­ã‚¹ãƒˆæ•°: {texts?.Count ?? 0}, ã‚¨ãƒ³ã‚¸ãƒ³: {ActiveEngine?.Name ?? "null"}");
        Console.WriteLine($"ğŸ”¥ğŸ”¥ğŸ”¥ [LLAMA_DEBUG] è¨€èª: {sourceLang?.Code} â†’ {targetLang?.Code}");

        ArgumentNullException.ThrowIfNull(texts, nameof(texts));
        ArgumentNullException.ThrowIfNull(sourceLang, nameof(sourceLang));
        ArgumentNullException.ThrowIfNull(targetLang, nameof(targetLang));

        if (texts.Count == 0)
        {
            throw new ArgumentException("ãƒ†ã‚­ã‚¹ãƒˆã®ã‚³ãƒ¬ã‚¯ã‚·ãƒ§ãƒ³ãŒç©ºã§ã™ã€‚", nameof(texts));
        }

        _logger.LogInformation("ãƒãƒƒãƒç¿»è¨³é–‹å§‹ - ãƒ†ã‚­ã‚¹ãƒˆæ•°: {Count}, ã‚¨ãƒ³ã‚¸ãƒ³: {Engine}", texts.Count, ActiveEngine.Name);

        var translationStart = DateTime.UtcNow;
        var translationId = Guid.NewGuid().ToString("N")[..12];

        // ğŸ”¥ [DIAGNOSTIC] ç¿»è¨³å®Ÿè¡Œé–‹å§‹è¨ºæ–­ã‚¤ãƒ™ãƒ³ãƒˆ
        if (_eventAggregator != null)
        {
            var logPath = System.IO.Path.Combine(AppDomain.CurrentDomain.BaseDirectory, "baketa_debug.log");

            await _eventAggregator.PublishAsync(new PipelineDiagnosticEvent
            {
                Stage = "TranslationEngineExecution",
                IsSuccess = true,
                ProcessingTimeMs = 0,
                SessionId = translationId,
                Severity = DiagnosticSeverity.Information,
                Message = $"DefaultTranslationService ãƒãƒƒãƒç¿»è¨³é–‹å§‹: {ActiveEngine.Name}",
                Metrics = new Dictionary<string, object>
                    {
                        { "EngineName", ActiveEngine.Name },
                        { "TextCount", texts.Count },
                        { "SourceLanguage", sourceLang.Code },
                        { "TargetLanguage", targetLang.Code },
                        { "TranslationServiceType", "DefaultTranslationService" }
                    }
            }).ConfigureAwait(false);

        }

        // ãƒªã‚¯ã‚¨ã‚¹ãƒˆä½œæˆ
        var transRequests = new List<TransModels.TranslationRequest>();
        foreach (var text in texts)
        {
            transRequests.Add(new TransModels.TranslationRequest
            {
                SourceText = text,
                SourceLanguage = sourceLang,
                TargetLanguage = targetLang,
                Context = context != null ? new TransModels.TranslationContext { DialogueId = context } : null
            });
        }

        // ç¿»è¨³å®Ÿè¡Œ
        var logPath2 = System.IO.Path.Combine(AppDomain.CurrentDomain.BaseDirectory, "baketa_debug.log");

        var result = await ActiveEngine.TranslateBatchAsync(transRequests, cancellationToken)
            .ConfigureAwait(false);


        _logger.LogInformation("ãƒãƒƒãƒç¿»è¨³å®Œäº† - çµæœæ•°: {Count}", result?.Count ?? 0);

        // ğŸ”¥ [DIAGNOSTIC] ç¿»è¨³å“è³ªè¨ºæ–­ã‚¤ãƒ™ãƒ³ãƒˆ
        if (_eventAggregator != null && result != null)
        {
            var translationEnd = DateTime.UtcNow;
            var translationDuration = (translationEnd - translationStart).TotalMilliseconds;
            var successCount = result.Count(r => r != null && r.IsSuccess); // ğŸ”§ [ULTRAPHASE4_L2] nullå®‰å…¨åŒ–
            var sameLanguageCount = 0;
            var sameLanguageFailures = new List<string>();

            // ç¿»è¨³å“è³ªãƒã‚§ãƒƒã‚¯: æ”¹è‰¯ã•ã‚ŒãŸè¨ºæ–­ãƒ­ã‚¸ãƒƒã‚¯
            for (int i = 0; i < Math.Min(texts.Count, result.Count); i++)
            {
                if (i < result.Count && result[i] != null && result[i].IsSuccess && !string.IsNullOrEmpty(result[i].TranslatedText)) // ğŸ”§ [ULTRAPHASE4_L2] nullå®‰å…¨åŒ–
                {
                    var originalText = texts[i];
                    var translatedText = result[i].TranslatedText;

                    // æ”¹è‰¯ã•ã‚ŒãŸç¿»è¨³å¤±æ•—æ¤œå‡ºãƒ­ã‚¸ãƒƒã‚¯
                    var isSameText = originalText.Trim().Equals(translatedText.Trim(), StringComparison.OrdinalIgnoreCase);
                    if (isSameText)
                    {
                        sameLanguageCount++;
                        sameLanguageFailures.Add($"{originalText} -> {translatedText} (default service)");
                        Console.WriteLine($"ğŸš¨ [DEFAULT_SERVICE_DIAGNOSTIC] ç¿»è¨³å¤±æ•—æ¤œå‡º: '{originalText}' -> '{translatedText}'");
                    }
                }
            }

            var qualityIsGood = sameLanguageCount == 0;

            // ç¿»è¨³å®Œäº†è¨ºæ–­ã‚¤ãƒ™ãƒ³ãƒˆ
            await _eventAggregator.PublishAsync(new PipelineDiagnosticEvent
            {
                Stage = "TranslationQualityCheck",
                IsSuccess = qualityIsGood,
                ProcessingTimeMs = (long)translationDuration,
                SessionId = translationId,
                Severity = qualityIsGood ? DiagnosticSeverity.Information : DiagnosticSeverity.Warning,
                Message = qualityIsGood
                    ? $"DefaultTranslationServiceç¿»è¨³å“è³ªè‰¯å¥½: å…¨{successCount}ä»¶æˆåŠŸï¼ˆæ”¹è‰¯ã•ã‚ŒãŸè¨ºæ–­æ¤œè¨¼æ¸ˆã¿ï¼‰"
                    : $"DefaultTranslationServiceç¿»è¨³å“è³ªå•é¡Œ: {sameLanguageCount}ä»¶ç¿»è¨³å¤±æ•—æ¤œå‡ºï¼ˆæ”¹è‰¯ã•ã‚ŒãŸè¨ºæ–­ä½¿ç”¨ï¼‰",
                Metrics = new Dictionary<string, object>
                    {
                        { "TotalTexts", texts.Count },
                        { "SuccessCount", successCount },
                        { "FailureCount", result.Count - successCount },
                        { "SameLanguageCount", sameLanguageCount },
                        { "QualityScore", qualityIsGood ? 1.0 : (double)(successCount - sameLanguageCount) / successCount },
                        { "ProcessingTimeMs", translationDuration },
                        { "EngineName", ActiveEngine.Name },
                        { "TranslationServiceType", "DefaultTranslationService" },
                        { "DetectionMethod", "EnhancedTextComparison" },
                        { "FailureDetails", sameLanguageFailures.Count > 0 ? sameLanguageFailures.Take(3) : new List<string>() },
                        { "IsTextComparisonBased", true }
                    }
            }).ConfigureAwait(false);

            Console.WriteLine($"ğŸ” [DEFAULT_TRANSLATION_QUALITY] DefaultTranslationServiceå“è³ªè¨ºæ–­: æˆåŠŸ{successCount}/{result.Count}, åŒä¸€çµæœ{sameLanguageCount}ä»¶");
        }

        return result!;
    }
}
